exports[`test renders NewSpring text version 1`] = `
<div style={{...}}>
<div className="text-center" style={{...}}>
<h6 className="flush hard text-dark-primary uppercase one-whole" style={{...}}>
NewSpring Church
</h6>
</div>
<Connect(Apollo(LiveWithoutData)) />
</div>
`;

exports[`test renders default text version 1`] = `
<div style={{...}}>
<div className="text-center" style={{...}}>
<h6 className="flush hard text-dark-primary uppercase one-whole" style={{...}}>
NewSpring Church
</h6>
</div>
<Connect(Apollo(LiveWithoutData)) />
</div>
`;

exports[`test renders isSearch version 1`] = `
<div style={{...}}>
<div className="text-center" style={{...}}>
<form onSubmit={[Function]} className="hard-ends soft-sides" action={true}>
<div className="input hard-bottom">
<i className="icon-search locked-left push-half-top text-light-primary" />
<input id="search" type="text" name="search" className="h5 text-light-primary" autoComplete="off" style={{...}} placeholder="Type your search here..." />
</div>
</form>
</div>
<Connect(Apollo(LiveWithoutData)) />
</div>
`;

exports[`test renders light version 1`] = `
<div style={{...}}>
<div className="text-center" style={{...}}>
<h6 className="flush-bottom soft-sides text-light-primary" style={{...}}>
test
</h6>
</div>
<Connect(Apollo(LiveWithoutData)) />
</div>
`;

exports[`test renders live version 1`] = `<Connect(Apollo(LiveWithoutData)) />`;

exports[`test renders searching version 1`] = `
<div style={{...}}>
<div className="text-center" style={{...}}>
<button onClick={[Function]} className="locked-right push-right text-light-secondary" style={{...}}>
<small>
Cancel
</small>
</button>
<h6 className="flush-bottom soft-sides text-dark-primary" style={{...}}>
test
</h6>
</div>
<Connect(Apollo(LiveWithoutData)) />
</div>
`;

exports[`test renders subtext if present 1`] = `
<div style={{...}}>
<div className="text-center" style={{...}}>
<h6 className="flush-bottom soft-sides text-dark-primary" style={{...}}>
test
</h6>
</div>
<div className="text-center" style={{...}}>
<h6 className="flush-bottom soft-sides text-dark-primary" style={{...}}>
some subtext
</h6>
</div>
<Connect(Apollo(LiveWithoutData)) />
</div>
`;

exports[`test renders with props 1`] = `
<div style={{...}}>
<div className="text-center" style={{...}}>
<h6 className="flush-bottom soft-sides text-dark-primary" style={{...}}>
test
</h6>
</div>
<Connect(Apollo(LiveWithoutData)) />
</div>
`;

exports[`test showSettings returns if showSettings 1`] = `
<Link
  className="text-light-primary plain soft-half-top soft-half-right overlay__item locked-top locked-right"
  onlyActiveOnIndex={false}
  style={Object {}}
  to="/profile/settings">
  <i
    className="icon-settings h4" />
</Link>
`;
